# simple-file-io

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README_8md.html  SimpleFileIO_8hpp.html  SimpleFileIO_8hpp.js  SimpleFileIO_8hpp__dep__incl.map  SimpleFileIO_8hpp__dep__incl.md5  SimpleFileIO_8hpp__incl.map  SimpleFileIO_8hpp__incl.md5  SimpleFileIO_8hpp_source.html  annotated.html  annotated_dup.js  benchmark__all_8cpp.html  benchmark__all_8cpp.js  benchmark__all_8cpp__incl.map  benchmark__all_8cpp__incl.md5  classSimpleFileIO_1_1ByteReader-members.html  classSimpleFileIO_1_1ByteReader.html  classSimpleFileIO_1_1ByteReader.js  classSimpleFileIO_1_1ByteWriter-members.html  classSimpleFileIO_1_1ByteWriter.html  classSimpleFileIO_1_1ByteWriter.js  classSimpleFileIO_1_1IOException-members.html  classSimpleFileIO_1_1IOException.html  classSimpleFileIO_1_1IOException.js  classSimpleFileIO_1_1IOException__coll__graph.map  classSimpleFileIO_1_1IOException__coll__graph.md5  classSimpleFileIO_1_1IOException__inherit__graph.map  classSimpleFileIO_1_1IOException__inherit__graph.md5  classSimpleFileIO_1_1TextReader-members.html  classSimpleFileIO_1_1TextReader.html  classSimpleFileIO_1_1TextReader.js  classSimpleFileIO_1_1TextWriter-members.html  classSimpleFileIO_1_1TextWriter.html  classSimpleFileIO_1_1TextWriter.js  classes.html  dir_000000_000001.html  (+57 more)
bench/: bench_all.cpp  bench_python.py  bench_python_all.py  bench_rawfile.cpp  bench_simplefileio.cpp  benchmark_all.cpp  benchmark_python.py  dummy_test.txt
include/: SimpleFileIO.hpp
search/: all_0.js  (+52 more)
(+6 files in other folders)
